examples/echo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      run: app
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
        - name: app
          image: jmalloc/echo-server
          ports:
            - containerPort: 8080
