examples/echo/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    example.app.type: echo
  name: example-echo-server
  namespace: dev
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
spec:
  selector:
    example.app.type: echo
  type: ClusterIP
  ports:
    - name: http-port
      port: 80
      protocol: TCP
      targetPort: 8080
