examples/echo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: dev
spec:
  ingressClassName: haproxy
  rules:
    - host: bar.buzz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-echo-server
                port:
                  name: http-port
